Completed the signup page. #4

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,6 +33,9 @@
     </nav>
 
     <div class="container">
+      <% if flash[:success] %>
+        <div class="alert alert-success" role="alert"><%= flash[:success] %></div>
+      <% end %>
       <%= yield %>
     </div>
   </body>
