--- a/app/views/auth/signup/index.html.erb
+++ b/app/views/auth/signup/index.html.erb
@@ -5,10 +5,11 @@
             <%= f.input :firstname %>
             <%= f.input :lastname %>
             <%= f.input :email, as: :email %>
-            <%= f.input :login, required: true, error: false%>
-            <%= f.input :password, as: :password, required: true, error: false %>
+            <%= f.input :login, required: true, error: false, hint: "Must have at least 5 characters"%>
+            <%= f.input :password, as: :password, required: true, error: false, 
+                hint: "Must have at least 6 characters, one number and one special character" %>
             <%= f.input :password_confirmation, as: :password, error: "Passwords did not match." %>
-            <%= f.button :submit, class: "btn-primary" %>
+            <%= f.button :submit, "Sign Up", class: "btn-primary" %>
         <% end %>
     </div>
 </div>
