--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,6 +36,9 @@
       <% if flash[:success] %>
         <div class="alert alert-success" role="alert"><%= flash[:success] %></div>
       <% end %>
+      <% if flash[:error] %>
+        <div class="alert alert-danger" role="alert"><%= flash[:error] %></div>
+      <% end %>
       <%= yield %>
     </div>
   </body>
