--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,15 +19,29 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Lerni</a>
+          <a class="navbar-brand" href="/">Lerni</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
-          <ul class="nav navbar-nav">
+          <!-- <ul class="nav navbar-nav">
             <li><a href="#">Some Link</a></li>
-          </ul>
-          <ul class="nav navbar-nav navbar-right">
-            <li><a href="#">Other Link</a></li>
-          </ul>
+          </ul> -->
+          <% if current_user == nil %>
+            <ul class="nav navbar-nav navbar-right">
+              <li><a href="<%= auth_login_path %>">Login</a></li>
+            </ul>
+          <% else %>
+            <ul class="nav navbar-nav navbar-right">
+              <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" 
+                  aria-haspopup="true" aria-expanded="false">
+                  <%= current_user.login %> <span class="caret" />
+                </a>
+                <ul class="dropdown-menu">
+                  <li><%= link_to 'Logout', auth_logout_path, method: :delete %></li>
+                </ul>
+              </li>
+            </ul>
+          <% end %>
         </div><!--/.nav-collapse -->
       </div>
     </nav>
