--- a/app/views/boxes/index.html.erb
+++ b/app/views/boxes/index.html.erb
@@ -14,7 +14,7 @@
                 <!-- img src="..." alt="..." -->
                 <div class="caption">
                     <h3><%= box[:name] %></h3>
-                    <!-- p>...</p -->
+                    <p><%= link_to "Add Card", new_box_card_path(box[:box_id]) %></p>
                 </div>
             </div>
         </div>
