--- a/app/views/boxes/index.html.erb
+++ b/app/views/boxes/index.html.erb
@@ -15,6 +15,7 @@
                 <div class="caption">
                     <h3><%= box[:name] %></h3>
                     <p><%= link_to "Add Card", new_box_card_path(box[:box_id]) %></p>
+                    <p><%= link_to "View all cards", box_cards_path(box[:box_id]) %></p>
                 </div>
             </div>
         </div>
