--- a/app/views/cards/new.html.erb
+++ b/app/views/cards/new.html.erb
@@ -1,7 +1,7 @@
 <div class="panel panel-primary">
     <div class="panel-heading">Add a card to xyz</div>
     <div class="panel-body">
-        <%= simple_form_for @formdata, url: box_cards_path do |f|%>
+        <%= simple_form_for @formdata, as: "formdata", url: box_cards_path do |f|%>
             <%= f.input :front %>
             <%= f.input :back %>
             <%= f.button :submit, "Create", class: "btn-primary" %>
