--- a/app/views/cards/index.html.erb
+++ b/app/views/cards/index.html.erb
@@ -1,3 +1,6 @@
+<p>
+  <%= link_to "List Boxes", boxes_path %>
+</p>
 <div class="panel panel-default">
   <div class="panel-heading">Panel heading</div>
   <table class="table">
